<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Activity.SplashActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/font"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/chango"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/easy_drawing_1" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_continue"
        android:fontFamily="@font/nosifer"
        android:gravity="center_horizontal"
        android:text="@string/art_is_fun"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/white"
        android:text="@string/continue_text"
        android:textAllCaps="false"
        android:textSize="18sp" />
</RelativeLayout>
